--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,9 @@
 {
-  name: MEAN,
-  version: 0.0.7,
-  dependencies: { }
+  "name": "MEAN",
+  "version": "0.0.7",
+  "dependencies": {
+    
+                "angular": "~1.2"
+    
+                }
 }
