--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "MEAN",
+  "name": "mean",
   "version": "0.0.7",
   "dependencies": {
     
-                "angular": "~1.2"
+                "angular": "~1.2.32"
     
                 }
 }
