--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.7",
   "dependencies": {
     
-                "angular": "~1.2.32"
+                "angular": "~1.2.32",
+                "angular-route": "~1.2.32"
     
                 }
 }
