--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,9 @@
   "dependencies": {
     
                 "angular": "~1.2.32",
-                "angular-route": "~1.2.32"
+                "angular-route": "~1.2.32",	
+                "angular-resource": "~1.2"
+
     
                 }
 }
