--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
 
 
 
+                    },
+ "devDependencies": {
+                    "should": "~4.0.4",
+                    "supertest": "~0.13.0"
                     }
+
 }
 
